RAG Docs updates

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.3.4",
 	"private": true,
 	"scripts": {
-		"dev": "npm run pyodide:fetch && vite dev --host",
+		"dev": "npm run pyodide:fetch && vite dev --host --port 3000",
 		"build": "npm run pyodide:fetch && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
